# repo

containers/: LICENSE  readme.md
containers/airflow/: Dockerfile  README.md  deploy_airflow.py  deploy_config.yaml  docker-compose.yaml  k8s-deployment.yaml  requirements-dev.txt  requirements.txt
containers/anchore/: Dockerfile  anchore-deployment.yaml  deploy_anchore.py  readme.md  scan_config.json  update_dockerfile.py  update_dockerfile.sh
containers/api-firewall/: deploy_api_firewall.py  example-openapi_spec.json  info.md  readme.md
containers/apidetector/: Dockerfile  README.md  USAGE.md  apidetector.py  apidetectorv2.py  app.py  deploy.py  k8s-deployment.yml  pocgenerator.py  requirements.txt
containers/arkime/: .env  Dockerfile  README.md  USAGE.md  deploy_arkime.py  (+6 more)
containers/openCTI/TTPMapper/: README.md  main.py  pyproject.toml  requirements.txt
containers/openCTI/TTPMapper/core/: config.py  deepseek_client.py  report_parser.py  spinner.py  ttp_mapper.py
containers/pcapan/rust-app/: Cargo.toml  Dockerfile
containers/pcapan/rust-app/src/: main.rs  mock_pcap.rs
containers/pcapan/rust-app/src/tests/: mock_pcap.rs
containers/splunk/splunk__connectors/parquet/rust/: Cargo.toml  deploy_config.yaml  docker-compose.yml  parquet-splunk-deployment.yaml  readme.md
containers/splunk/splunk__connectors/parquet/rust/src/: handler.rs  main.rs  schema.rs  sender.rs
detect_rules/: README.md
os/linux/system-monitoring/: Cargo.toml  Dockerfile  build.rs  linux-sentinel-deployment.yaml  linux-sentinel-deployment.yml  linux-sentinel.service  logic_anchor.md  master.toml  plan.md  readme.md  rules.yara  run.sh  sentinel.conf
os/linux/system-monitoring/archive/: linux-sentinel.service  linux-sentinel.sh  linux_sentinel.py
os/linux/system-monitoring/rust/: Dockerfile  cargo.toml  linux-sentinel-deployment.yml  linux-sentinel.service  linux-sentinel.timer  main.rs  sentinel.conf
os/linux/system-monitoring/src/: config.rs  main.rs
os/linux/system-monitoring/src/api/: server.rs
os/linux/system-monitoring/src/bpf/: sentinel.bpf.c
os/linux/system-monitoring/src/engine/: ebpf.rs  honeypot.rs  rules.rs  scanner.rs  yara.rs
os/linux/system-monitoring/src/siem/: models.rs  transmitter.rs
os/linux/system-monitoring/src/utils/: logging.rs
os/windows/c2_detection_toolkit/: Build-AirGapPackage.ps1  C2Sensor.cs  C2Sensor_Config.ini  C2Sensor_Launcher.ps1  C2VectorCorrelation.ps1  Cargo.toml  Enforce-StrictFirewall.ps1  Get-C2Sensor-ForensicInfo.ps1  Invoke-AdvancedMemoryHunter.ps1  Invoke-AutomatedEradication.ps1  Invoke-DFIR_Orchestrator.ps1  Invoke-TargetTriage.ps1  Test-C2FullSuite.ps1  readme.md
os/windows/c2_detection_toolkit/archived_prototypes/python_ML_addon/: BeaconML.py  MonitorC2Activities_AdvancedBeaconing.ps1  Test-C2FullSuite.ps1
os/windows/c2_detection_toolkit/archived_prototypes/v1/: MonitorC2Activities.ps1
os/windows/c2_detection_toolkit/archived_prototypes/v1/advanced_algorithms/: BeaconML.py  test_results.md
os/windows/c2_detection_toolkit/archived_prototypes/v2/: InstallSysmonForC2Detection_v2.ps1  MonitorC2Activities_v2.ps1  Test-C2Detection.ps1  readme.md
os/windows/c2_detection_toolkit/archived_prototypes/v3/: BeaconML.py  Invoke-C2HunterLifecycle.ps1  MonitorKernelC2BeaconHunter_v3.ps1  Setup-C2HunterEnvironment.ps1  UninstallKernelC2Hunter.ps1
os/windows/c2_detection_toolkit/archived_prototypes/v4/: BeaconML.py  Invoke-C2Containment.ps1  Setup-C2HunterEnvironment.ps1  Start-C2Hunter.ps1  Teardown-C2HunterEnvironment.ps1  Test-C2FullSuite.ps1  config.ini
os/windows/c2_detection_toolkit/archived_prototypes/v4/cti_check/: Invoke-ThreatIntelCheck.ps1  config.ini
os/windows/c2_detection_toolkit/archived_prototypes/v5/: Invoke-AdvancedMemoryHunter.ps1  Invoke-C2Containment.ps1  Invoke-DFIR_Orchestrator.ps1  Setup-C2HunterEnvironment.ps1  v5_PI_Plan_Retro.md
os/windows/c2_detection_toolkit/archived_prototypes/v6/: C2Sensor.cs  MonitorKernelC2BeaconHunter_v6.ps1
os/windows/c2_detection_toolkit/src/: lib.rs
os/windows/c2_detection_toolkit/suricata/: c2_threat_domains.rules  chaos_ransomware.list  salt_typhoon_observed_ttps.rules  salt_typhoon_unc4841.rules
os/windows/c2_detection_toolkit/suricata/upstream/: AbuseCH_FeodoTracker.rules  AbuseCH_SSLBL_IP.rules
os/windows/c2_sensor/ml_engine/: Cargo.toml
os/windows/c2_sensor/ml_engine/src/: lib.rs
os/windows/dlp_sensor/ml_engine/: Cargo.toml
os/windows/dlp_sensor/ml_engine/src/: lib.rs
os/windows/dlp_sensor/transmission/: Cargo.toml
os/windows/dlp_sensor/transmission/src/: lib.rs
os/windows/dlp_toolkit/hook_engine/: Cargo.toml
os/windows/dlp_toolkit/hook_engine/src/: hook_teardown.rs  lib.rs
os/windows/dlp_toolkit/ml_engine/: Cargo.toml
os/windows/dlp_toolkit/ml_engine/src/: lib.rs
os/windows/edr_sensor/deep_sensor_ml/: Cargo.toml
os/windows/edr_sensor/deep_sensor_ml/src/: lib.rs
os/windows/edr_toolkit/rust_driver_dev/rust-driver/: Cargo.toml  build.rs
os/windows/edr_toolkit/rust_driver_dev/rust-driver/refactoring_optimizations/: Cargo.toml  Makefile.toml  build.rs  changelog.md  driver.inf
os/windows/edr_toolkit/rust_driver_dev/rust-driver/refactoring_optimizations/src/: lib.rs
os/windows/edr_toolkit/rust_driver_dev/rust-driver/refactoring_optimizations/user-mode/: Cargo.toml
os/windows/edr_toolkit/rust_driver_dev/rust-driver/refactoring_optimizations/user-mode/src/: main.rs
os/windows/edr_toolkit/rust_driver_dev/rust-driver/src/: lib.rs
os/windows/ring0_driver/rust-driver/: Cargo.toml  Makefile.toml  build.rs  test_kernel_driver.ps1
os/windows/ring0_driver/rust-driver/src/: lib.rs
os/windows/sensor_middleware/core_ingress/: Cargo.toml
os/windows/sensor_middleware/core_ingress/src/: main.rs
os/windows/sensor_middleware/worker_elastic/: Cargo.toml
os/windows/sensor_middleware/worker_elastic/src/: main.rs
os/windows/sensor_middleware/worker_splunk/: Cargo.toml
os/windows/sensor_middleware/worker_splunk/src/: main.rs
os/windows/sensor_middleware/worker_sql/: Cargo.toml
os/windows/sensor_middleware/worker_sql/src/: main.rs
(+10001 files in other folders)
