[package]
name = "linux-sentinel"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[dependencies]
# Core CLI and Config
anyhow = "1.0"
config = { version = "0.14", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Async Runtime & Concurrency
tokio = { version = "1.40", features = ["full", "signal"] }
rayon = "1.10"

# Web Server (Dashboard)
axum = "0.7"

# eBPF and System Security
libbpf-rs = "0.23"
yara = "0.25"

# Logging and Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# SIEM Storage and Middleware Transmission
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[build-dependencies]
libbpf-cargo = "0.23"