[package]
name = "c2sensor_ml"
version = "1.0.0"
edition = "2021"

[lib]
name = "c2sensor_ml"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
linfa = "0.7"
linfa-clustering = "0.7"
linfa-nn = "0.7"
ndarray = "0.15"
rand = "0.8"
regex = "1.10"