[package]
name = "c2sensor_ml"
version = "1.0.1"
edition = "2021"

[lib]
name = "c2sensor_ml"
crate-type = ["cdylib"]

[dependencies]
# --- Gateway Routing Dependencies ---
tokio = { version = "1", features = ["full"] }
transmission = { path = "../transmission" }
chrono = "0.4"

# --- Core ML & Parsing ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
linfa = "0.7"
linfa-clustering = "0.7"
linfa-nn = "0.7"
ndarray = "0.15"
rand = "0.8"
regex = "1.10"
gethostname = "0.4"
uuid = { version = "1", features = ["v4"] }