[package]
name = "data_sensor_ml"
version = "0.2.0"
edition = "2021"
authors = ["Robert Weber"]
description = "Native FFI UEBA & Content Inspection Engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
transmission = { path = "../transmission" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
md-5 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
extended-isolation-forest = "0.2"
chrono = "0.4"
lru = "0.12.0"