[package]
name = "transmission"
version = "2.6.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }