[package]
name = "data_sensor_ml"
version = "0.2.0"
edition = "2021"
authors = ["Robert Weber"]
description = "Native FFI UEBA & Content Inspection Engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
zip = "0.6"