[package]
name = "core_ingress"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }