[package]
name = "core_ingress"
version = "0.0.1"
edition = "2021"

[dependencies]
axum             = "0.7"
# axum-server provides optional TLS termination via rustls.
# Controlled at runtime by TlsEnabled in config.ini.
axum-server      = { version = "0.7", features = ["tls-rustls"] }
tokio            = { version = "1", features = ["full"] }
async-nats       = "0.33"
rust-ini         = "0.21"
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
# tower-http removed: trace and timeout features were declared but never used.
# Re-add when implementing rate-limiting or request-level tracing middleware.