[package]
name = "parquet-connector"
version = "0.1.0"
edition = "mvp"

[dependencies]
parquet = { version = "53.0", features = ["arrow"] }
arrow = "53.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
prometheus = { version = "0.13", features = ["push"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
notify = "6.1"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

[profile.release]
opt-level = 3
strip = true
lto = true